--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/normalize";
+@import "./utils/mixins";
+@import "./utils/variables";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/container.scss";
+@import "./blocks/trial.scss";
