--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,23 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin onTablet768 {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin onTablet990 {
+  @media (min-width: 990px) {
+    @content;
+  }
+}
+
+@mixin onLaptop {
+  @media (min-width: 1440px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1920px) {
+    @content;
   }
 }
