--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,7 @@
 @import "./blocks/header.scss";
 @import "./blocks/container.scss";
 @import "./blocks/trial.scss";
+@import "./blocks/benefits.scss";
+@import "./blocks/supported.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/questions.scss";
