--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -9,13 +9,24 @@
     justify-content: space-between;
     padding-top: 16px;
     padding-bottom: 8px;
+    margin-bottom: 16px;
     width: auto;
 
+    @include onPhone375 {
+      margin-bottom: 24px;
+    }
+
     @include onTablet768 {
+      margin-bottom: 28px;
       padding: 23px 0;
     }
 
+    @include onLaptop {
+      margin-bottom: 34px;
+    }
+
     @include onDesktop {
+      margin-bottom: 72px;
       padding: 30px 0;
     }
   }
@@ -55,7 +66,12 @@
 
   &__socials-link {
     width: 24px;
-    height: 24px;
+    opacity: $default-opacity;
+    transition: opacity $default-transition ease-in-out;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 
   &__authorization {
