--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,8 +1,9 @@
 .page {
   overflow-x: hidden;
+
   &__body {
     background-image: url("../images/background/375.jpg");
-    background-size: 100%;
+    background-size: 100vw 100%;
     background-repeat: no-repeat;
     background-position: top;
     overflow-x: hidden;
@@ -15,13 +16,13 @@
 
     @include onTablet990 {
       background-image: url("../images/background/990.jpg");
-      background-size: 110%;
+      background-size: 100vw 100%;
       padding: 0 23px;
     }
 
     @include onLaptop {
       background-image: url("../images/background/1440.jpg");
-      background-size: 100%;
+      background-size: 100vw 100%;
       padding: 0 23px;
     }
 
