--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,11 +2,14 @@
 @import "./utils/mixins";
 @import "./utils/variables";
 
+@import "./blocks/grid.scss";
+@import "./blocks/container.scss";
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
-@import "./blocks/container.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/channels.scss";
 @import "./blocks/trial.scss";
 @import "./blocks/benefits.scss";
 @import "./blocks/supported.scss";
-@import "./blocks/subscription.scss";
 @import "./blocks/questions.scss";
+@import "./blocks/footer.scss";
