--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,4 +1,8 @@
 .footer {
+  &__container {
+    @extend %container;
+  }
+
   &__content {
     padding: 48px 0;
     border-top: 1px solid #606060;
@@ -35,7 +39,7 @@
     flex-direction: column;
     gap: 8px;
     list-style: none;
-    margin: 0;
+    margin: 0 0 8px;
     padding: 0;
   }
 
@@ -59,6 +63,11 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    margin-top: 32px;
+
+    @include onTablet768 {
+      margin-top: 0;
+    }
 
     @include onDesktop {
       gap: 50px;
