--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,6 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 100px;
+
+  &__container {
+    @extend %container;
+  }
 
   &__nav {
     display: flex;
