--- a/src/styles/blocks/questions.scss
+++ b/src/styles/blocks/questions.scss
@@ -1,4 +1,10 @@
 .questions {
+  margin-bottom: 20px;
+
+  &__container {
+    @extend %container;
+  }
+
   &__title {
     color: #fff;
     text-align: center;
@@ -26,7 +32,7 @@
     }
   }
 
-  &__container {
+  &__content {
     display: block;
 
     @include onTablet768 {
@@ -57,11 +63,9 @@
   }
 
   &__item {
-    display: flex;
-    justify-content: space-between;
-    gap: 50px;
     padding-bottom: 20px;
     border-bottom: 1px solid #606060;
+    cursor: pointer;
 
     &--last {
       border-bottom: none;
@@ -69,12 +73,22 @@
     }
 
     @include onTablet768 {
-      height: 3rem;
-      
       &:last-child {
         border-bottom: none;
         padding-bottom: 0;
       }
+    }
+  }
+
+  &__question {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    padding-bottom: 16px;
+    transition: text-shadow $default-transition ease-in-out;
+
+    @include onTablet768 {
+      height: 3rem;
     }
 
     @include onDesktop {
@@ -88,7 +102,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: 140%;
-    word-break: keep-all;
 
     @include onTablet990 {
       font-size: 18px;
@@ -101,11 +114,32 @@
   }
 
   &__answer {
-    display: none;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out;
+    color: #fff;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    opacity: $default-opacity;
   }
 
   &__img {
     align-self: flex-start;
     width: 24px;
+    transition: transform $default-transition ease-in-out;
+  }
+
+  &__item--active &__answer {
+    max-height: 500px;
+  }
+
+  &__item--active &__question {
+    text-shadow: #fff 1px 0 10px;
+  }
+
+  &__item--active &__img {
+    transform: rotate(180deg);
   }
 }
