--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -3,21 +3,34 @@
   border-radius: 20px;
   width: 100%;
   margin: auto;
+  margin-bottom: 60px;
+
+  @include onTablet768 {
+    margin-bottom: 80px;
+  }
 
   @include onTablet990 {
+    margin-bottom: 100px;
     max-width: 800px;
   }
 
   @include onLaptop {
+    margin-bottom: 110px;
     max-width: 850px;
   }
 
   @include onDesktop {
+    margin-bottom: 125px;
     max-width: 1150px;
+  }
+
+  &__container {
+    @extend %container;
   }
 
   &__content {
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: center;
     align-self: center;
@@ -42,6 +55,74 @@
     @include onDesktop {
       max-width: 730px;
       padding-bottom: 96px;
+    }
+  }
+
+  &__eye {
+    --size: 40px;
+    margin: auto;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    background: #131313;
+    border: 2px solid red;
+    border-bottom: 0;
+    border-top-left-radius: calc(3.75 * var(--size));
+    border-top-right-radius: calc(3.75 * var(--size));
+    width: calc(2 * var(--size));
+    height: var(--size);
+    transform: translateY(-138%);
+
+    @include onPhone375 {
+      --size: 44px;
+      transform: translateY(-134%);
+    }
+
+    @include onTablet768 {
+      --size: 46px;
+      transform: translateY(-132%);
+    }
+
+    @include onTablet990 {
+      --size: 50px;
+      transform: translateY(-130%);
+    }
+
+    @include onLaptop {
+      --size: 54px;
+      transform: translateY(-128%);
+    }
+
+    @include onDesktop {
+      --size: 72px;
+      transform: translateY(-121%);
+    }
+  }
+
+  &__eye-image {
+    position: absolute;
+    bottom: 0;
+    width: 40px;
+    transform: translateY(50%);
+
+    @include onPhone375 {
+      width: 44px;
+    }
+
+    @include onTablet768 {
+      width: 46px;
+    }
+
+    @include onTablet990 {
+      width: 50px;
+    }
+
+    @include onLaptop {
+      width: 54px;
+    }
+
+    @include onDesktop {
+      width: 72px;
     }
   }
 
@@ -171,6 +252,7 @@
     border: 1px solid #d0d0d1;
     box-sizing: border-box;
     flex: 1.5;
+    outline: none;
 
     @include onTablet768 {
       border-top-right-radius: 0;
