--- a/src/styles/blocks/supported.scss
+++ b/src/styles/blocks/supported.scss
@@ -6,6 +6,10 @@
   min-width: 140px;
   width: 100%;
 
+  &__container {
+    @extend %container;
+  }
+
   &__content {
     display: flex;
     flex-direction: column;
@@ -30,12 +34,14 @@
 
   &__list {
     display: flex;
+    gap: 24px;
     flex-wrap: wrap;
     padding: 0;
     width: 100%;
 
     @include onTablet768 {
       flex-direction: row;
+      gap: 0;
     }
   }
 
@@ -61,7 +67,7 @@
     }
 
     @include onDesktop {
-      width: 40px;
+      height: 40px;
     }
   }
 }
