--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,9 @@
 @import "./utils/normalize";
 @import "./utils/mixins";
 @import "./utils/variables";
+@import "./utils/placeholders";
 
 @import "./blocks/grid.scss";
-@import "./blocks/container.scss";
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
 @import "./blocks/subscription.scss";
