--- a/src/styles/blocks/channels.scss
+++ b/src/styles/blocks/channels.scss
@@ -41,7 +41,7 @@
   }
 
   &__title-text {
-    color: #fff;
+    color: $white;
     text-align: center;
     font-size: 24px;
     font-style: normal;
@@ -84,7 +84,7 @@
   }
 
   &__text {
-    color: #fff;
+    color: $white;
     text-align: center;
     font-size: 15px;
     font-style: normal;
@@ -142,8 +142,8 @@
     }
 
     &--active {
-      border: 2px solid #fc3232;
-      background-color: #fc3232;
+      border: 2px solid $primary-red;
+      background-color: $primary-red;
       box-shadow: 1px 4px 16px 0 rgba(241, 53, 56, 0.64);
 
       &:hover {
@@ -153,7 +153,7 @@
   }
 
   &__theme-button-text {
-    color: #fff;
+    color: $white;
     font-size: 15px;
     font-style: normal;
     font-weight: 400;
@@ -205,7 +205,7 @@
     align-items: center;
     gap: 4px;
     margin-left: auto;
-    color: #fff;
+    color: $white;
     text-align: right;
     font-size: 14px;
     font-style: normal;
