--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -90,7 +90,7 @@
     align-self: flex-end;
     text-align: center;
     display: none;
-    color: #fff;
+    color: $white;
     font-size: 16px;
     font-style: normal;
     padding-bottom: 10px;
@@ -108,7 +108,7 @@
       content: "";
       position: absolute;
       width: 0;
-      background: #fff;
+      background: $white;
       left: 45%;
       height: 1px;
       bottom: 0;
@@ -148,15 +148,15 @@
     padding: 11px 24px;
     border-radius: 5px;
     font-weight: 500;
-    color: #fff;
-    border: 2px solid #fff;
+    color: $white;
+    border: 2px solid $white;
     text-decoration: none;
     background: transparent;
     transition: all $default-transition ease-in-out;
 
     &:hover {
       color: black;
-      background-color: #fff;
+      background-color: $white;
       box-shadow: 1px 4px 16px 0 rgba(232, 232, 240, 0.64);
     }
 
